fix bug(button color on safari)

--- a/src/assets/styles/_generic.scss
+++ b/src/assets/styles/_generic.scss
@@ -67,6 +67,7 @@ button,
 textarea,
 select {
   font: inherit;
+  color: inherit;
 
   &:focus,
   &:active {
